<resources>
    <string name="EDM">Enable Dark Mode</string>
    <string name="Settings">Settings</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_and_phone_number">About</string>
    <string name="account">Account</string>
    <string name="account_already_verified">Account already verified</string>
    <string name="account_link">www.google.com</string>
    <string name="account_verification">Account Verification</string>
    <string name="account_verification_info">A verified badge is a check that appears on a account to indicate that the account is the authentic presence of a notable public figure, celebrity, global brand or entity it represents. Submitting a request not guarantee that your account will be verified.</string>
    <string name="add">ADD</string>
    <string name="add_contact">Add Contact</string>
    <string name="add_participants">Add Participants</string>
    <string name="add_recipients">Add recipients</string>
    <string name="add_to_contacts">Add to Contacts</string>
    <string name="added">Added</string>
    <string name="added_successfully">added successfully</string>
    <string name="adding">Adding...</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="after_1_minute">After 1 minute</string>
    <string name="after_30_minutes">After 30 minutes</string>
    <string name="after_5_minutes">After 5 minutes</string>
    <string name="agora_app_id">e399dcc4bde349c886862a19cbbe2e9d</string>
    <string name="agree_and_continue">Agree and Continue</string>
    <string name="album_name_all">All Media</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="answer">ANSWER</string>
    <string name="answered">ANSWERED</string>
    <string name="app_folder_name">Super Chat</string>
    <string name="app_name">ChatHere</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_no_longer_an_admin">are no longer an admin</string>
    <string name="are_now_an_admin">are now an Admin</string>
    <string name="at">at</string>
    <string name="audio">Audio</string>
    <string name="audio_permission_error">Audio Permissions are Missing</string>
    <string name="authenticate_with">Authenticate with %s</string>
    <string name="backing_up">Backing up ...</string>
    <string name="backing_up_message">"Backing up message, please don't exit the app"</string>
    <string name="backup">BACK UP</string>
    <string name="backup_cancelled">Backup Cancelled</string>
    <string name="backup_completed">Backup Completed</string>
    <string name="backup_error">Error in Backup Process, please try again later.</string>
    <string name="backup_failed">Backup failed</string>
    <string name="backup_file_mismatched">Backup file does not match your phone number!</string>
    <string name="backup_in_progress">Backup in progress</string>
    <string name="backup_notice">"on Android 10 and above, after deleting the app you will lose your media files unless you've made a backup"</string>
    <string name="backup_success">Backup success</string>
    <string name="banned_from_group">You are banned from this group</string>
    <string name="banner_unit_id_main" />
    <string name="banner_unit_id_new_chat" />
    <string name="biometric">Biometric</string>
    <string name="biometrics_not_available">Biometrics Not Available on this Device!</string>
    <string name="block_contact">Block Contact</string>
    <string name="block_screenshot">Hide my online status</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="broadcast_list_info">Broadcast list info</string>
    <string name="broadcast_name">Broadcast name</string>
    <string name="button_apply">Apply(%1$d)</string>
    <string name="button_apply_default">Apply</string>
    <string name="button_back">Back</string>
    <string name="button_ok">OK</string>
    <string name="button_original">Original</string>
    <string name="button_preview">Preview</string>
    <string name="button_sure">Sure(%1$d)</string>
    <string name="button_sure_default">Sure</string>
    <string name="calls">Calls</string>
    <string name="camera">Camera</string>
    <string name="camera_tip">Tap to Take a Photo,Hold to Record Video</string>
    <string name="cancel">CANCEL</string>
    <string name="cancel_verification_confirmation_message">Are you sure you want to cancel the request to verifiy your phone number?</string>
    <string name="cannot_open_this_file">cannot open this file</string>
    <string name="card_content_descriptor">card</string>
    <string name="change_location">Change location</string>
    <string name="changed_group_preferences">changed group preferences</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chat">Chat</string>
    <string name="chat_backup">Chat backup</string>
    <string name="chat_settings">Chat settings</string>
    <string name="chats">Chats</string>
    <string name="checking">Checking..</string>
    <string name="checking_contact">Checking Contact</string>
    <string name="choose_email_app">Choose Email App</string>
    <string name="choose_external_storage">Choose External Storage</string>
    <string name="choose_number">Choose a Number</string>
    <string name="choose_storage">Choose Storage</string>
    <string name="choose_wallpaper">Choose Wallpaper</string>
    <string name="clear_chat">Clear chat</string>
    <string name="clear_chat_message">are you sure you want to delete all messages in this chat?</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">00000000000000000000000000000000</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="encription_about">Messages are end-to-end encrypted. No one outside of this chat,not even Swiper can read or listen to them. Tap to learn more.</string>
    <string name="enter_is_send_title">Enter key will send your message</string>
    <string name="enter_is_sent_smmary">Enter is Send</string>
    <string name="ignore_battery_dialog_title">Ignore Battery Optimization</string>
    <string name="ignore_battery_summary">In order to make sure that all messages delivered correctly you have to disable Battery Optimizations</string>
    <string name="immediately">Immediately</string>
    <string name="include_media_files">Include Media Files</string>
    <string name="invite">Invite</string>
    <string name="key_autodownload_cellular">key_autodownload_cellular</string>
    <string name="key_autodownload_roaming">key_autodownload_roaming</string>
    <string name="key_autodownload_wifi">key_autodownload_wifi</string>
    <string name="last_backup">Last Backup</string>
    <string name="lock_after">Lock after</string>
    <string name="media_auto_download_title">Media auto download</string>
    <string name="mobile_data_title">when using mobile data</string>
    <string name="new_broadcast">New broadcast</string>
    <string name="new_group">New Group</string>
    <string name="notifications">Notifications</string>
    <string name="pref_header_about">About</string>
    <string name="pref_header_chat">Chat</string>
    <string name="pref_header_customize">Customize</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_header_profile">Profile</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="privacy">Privacy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="profile">Profile</string>
    <string name="received_media_items">Received Media Items</string>
    <string name="roaming_title">when roaming</string>
    <string name="search_hint">Search</string>
    <string name="security">Security</string>
    <string name="sent_and_received_voice_notes">Sent &amp; Received Voice Notes</string>
    <string name="sent_media_items">Sent Media Items</string>
    <string name="unlock_with_fingerprint">Unlock with Fingerprint</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="wifi_title">when using Wifi</string>
</resources>