<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/chat_settings">
        <CheckBoxPreference android:title="@string/enter_is_send_title" android:key="enter_is_send" android:summary="@string/enter_is_sent_smmary" android:defaultValue="false" />
        <Preference android:title="@string/wallpaper" android:key="wallpaper_path" />
        <Preference android:title="@string/chat_backup" android:key="chat_backup" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/media_auto_download_title">
        <com.teamxdevelopers.SuperChat.activities.settings.SettingsMultiSelectPreference android:entries="@array/autodownload" android:title="@string/mobile_data_title" android:key="@string/key_autodownload_cellular" android:defaultValue="@array/autodownload_cellular_defaults" android:entryValues="@array/autodownload_values" />
        <com.teamxdevelopers.SuperChat.activities.settings.SettingsMultiSelectPreference android:entries="@array/autodownload" android:title="@string/roaming_title" android:key="@string/key_autodownload_roaming" android:defaultValue="@array/autodownload_roaming_defaults" android:entryValues="@array/autodownload_values" />
        <com.teamxdevelopers.SuperChat.activities.settings.SettingsMultiSelectPreference android:entries="@array/autodownload" android:title="@string/wifi_title" android:key="@string/key_autodownload_wifi" android:defaultValue="@array/autodownload_wifi_defaults" android:entryValues="@array/autodownload_values" />
    </PreferenceCategory>
</PreferenceScreen>