<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_search" android:id="@id/search_item" android:title="@string/search_hint" app:actionViewClass="androidx.appcompat.widget.SearchView" app:showAsAction="always|collapseActionView" />
    <item android:icon="@drawable/ic_group_add" android:id="@id/new_group_item" android:title="@string/new_group" app:showAsAction="never" />
    <item android:icon="@drawable/ic_broadcast" android:id="@id/new_broadcast_item" android:title="@string/new_broadcast" app:showAsAction="never" />
    <item android:icon="@drawable/ic_person_add" android:id="@id/invite_item" android:title="@string/invite" app:showAsAction="never" />
</menu>