<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.SwitchCompat android:textColor="@color/colorText" android:id="@id/switch_unlock_fingerprint" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/unlock_with_fingerprint" />
    <TextView android:textColor="@color/colorTextDesc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="when enabled, you will use your fingerprint to open the app" />
    <TextView android:textStyle="bold" android:textColor="@color/colorAccent" android:id="@id/tv_lock_after" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:text="@string/lock_after" />
    <RadioGroup android:id="@id/radio_group_lock_after" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
        <RadioButton android:textColor="@color/colorText" android:id="@id/btn_radio_immediately" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="true" android:text="@string/immediately" />
        <RadioButton android:textColor="@color/colorText" android:id="@id/btn_radio_one_minute" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/after_1_minute" />
        <RadioButton android:textColor="@color/colorText" android:id="@id/btn_radio_five_minutes" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/after_5_minutes" />
        <RadioButton android:textColor="@color/colorText" android:id="@id/btn_radio_thirty_minutes" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/after_30_minutes" />
    </RadioGroup>
    <androidx.cardview.widget.CardView android:id="@id/about_encryption" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" app:cardBackgroundColor="@color/cardBgColor" app:cardElevation="1.0dip">
        <TextView android:textColor="@color/item_title_color_user_details" android:gravity="center" android:padding="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Encryption" android:drawableLeft="@drawable/ic_baseline_lock_20" android:drawablePadding="8.0dip" android:drawableTint="@color/iconTintColor" />
        <TextView android:textColor="@color/gray" android:layout_gravity="bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/encription_about" android:layout_marginStart="40.5dip" android:layout_marginEnd="12.0dip" />
    </androidx.cardview.widget.CardView>
</LinearLayout>