<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/bgColor" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/imageView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginStart="16.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/ic_backup" app:tint="@color/iconTintColor" />
    <TextView android:textColor="@color/colorText" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/last_backup" android:layout_marginStart="8.0dip" app:layout_constraintBottom_toBottomOf="@id/imageView5" app:layout_constraintStart_toEndOf="@id/imageView5" app:layout_constraintTop_toTopOf="@id/imageView5" />
    <TextView android:textColor="@color/colorTextDesc" android:id="@id/tv_last_backup" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" app:layout_constraintStart_toStartOf="@id/textView2" app:layout_constraintTop_toBottomOf="@id/textView2" />
    <androidx.appcompat.widget.SwitchCompat android:textColor="@color/colorText" android:id="@id/switch_include_media" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/include_media_files" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="@id/tv_last_backup" app:layout_constraintTop_toBottomOf="@id/tv_last_backup" />
    <LinearLayout android:orientation="vertical" android:id="@id/layout_media_items" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="@id/switch_include_media" app:layout_constraintTop_toBottomOf="@id/switch_include_media">
        <TextView android:textColor="@color/colorTextDesc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/backup_notice" />
        <CheckBox android:textColor="@color/colorText" android:id="@id/chb_sent_media_items" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sent_media_items" />
        <CheckBox android:textColor="@color/colorText" android:id="@id/chb_received_media_items" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/received_media_items" />
        <CheckBox android:enabled="false" android:textColor="@color/colorText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="true" android:text="@string/sent_and_received_voice_notes" />
    </LinearLayout>
    <ProgressBar android:id="@id/progress" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:indeterminate="false" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="@id/tv_last_backup" app:layout_constraintTop_toBottomOf="@id/layout_media_items" style="@style/Widget.AppCompat.ProgressBar.Horizontal" />
    <Button android:textColor="@color/white" android:id="@id/btn_backup" android:background="@color/colorAccent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/backup" app:layout_constraintStart_toStartOf="@id/tv_last_backup" app:layout_constraintTop_toBottomOf="@id/layout_media_items" />
    <Button android:textColor="@color/white" android:id="@id/btn_cancel_backup" android:background="@color/colorAccent" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/cancel" app:layout_constraintStart_toStartOf="@id/tv_last_backup" app:layout_constraintTop_toBottomOf="@id/progress" />
</androidx.constraintlayout.widget.ConstraintLayout>