<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/bgColor" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="16.0sp" android:textColor="@color/colorText" android:gravity="center_vertical" android:id="@id/tv_profile" android:background="?selectableItemBackground" android:padding="16.0dip" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/pref_header_profile" android:drawableLeft="@drawable/ic_account_circle" android:drawablePadding="16.0dip" android:drawableTint="@color/iconTintLight" />
    <TextView android:textSize="16.0sp" android:textColor="@color/colorText" android:gravity="center_vertical" android:id="@id/tv_account" android:background="?selectableItemBackground" android:padding="16.0dip" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/account" android:drawableLeft="@drawable/ic_key" android:drawablePadding="16.0dip" android:drawableTint="@color/iconTintLight" />
    <TextView android:textSize="16.0sp" android:textColor="@color/colorText" android:gravity="center_vertical" android:id="@id/tv_privacy" android:background="?selectableItemBackground" android:padding="16.0dip" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/privacy" android:drawableLeft="@drawable/ic_baseline_lock_24" android:drawablePadding="16.0dip" android:drawableTint="@color/iconTintLight" />
    <TextView android:textSize="16.0sp" android:textColor="@color/colorText" android:gravity="center_vertical" android:id="@id/tv_notifications" android:background="?selectableItemBackground" android:padding="16.0dip" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/pref_header_notifications" android:drawableLeft="@drawable/ic_notifications" android:drawablePadding="16.0dip" android:drawableTint="@color/iconTintLight" />
    <TextView android:textSize="16.0sp" android:textColor="@color/colorText" android:gravity="center_vertical" android:id="@id/tv_security" android:background="?selectableItemBackground" android:padding="16.0dip" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/security" android:drawableLeft="@drawable/ic_security" android:drawablePadding="16.0dip" android:drawableTint="@color/iconTintLight" />
    <TextView android:textSize="16.0sp" android:textColor="@color/colorText" android:gravity="center_vertical" android:id="@id/tv_chat" android:background="?selectableItemBackground" android:padding="16.0dip" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/pref_header_chat" android:drawableLeft="@drawable/ic_chat" android:drawablePadding="16.0dip" android:drawableTint="@color/iconTintLight" />
    <TextView android:textSize="16.0sp" android:textColor="@color/colorText" android:gravity="center_vertical" android:id="@id/tv_customize" android:background="?selectableItemBackground" android:padding="16.0dip" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/pref_header_customize" android:drawableLeft="@drawable/ic_baseline_edit_24" android:drawablePadding="16.0dip" android:drawableTint="@color/iconTintLight" />
    <TextView android:textSize="16.0sp" android:textColor="@color/colorText" android:gravity="center_vertical" android:id="@id/tv_privacy_policy" android:background="?selectableItemBackground" android:padding="16.0dip" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/privacy_policy" android:drawableLeft="@drawable/ic_policy_24px" android:drawablePadding="16.0dip" android:drawableTint="@color/iconTintLight" />
    <TextView android:textSize="16.0sp" android:textColor="@color/colorText" android:gravity="center_vertical" android:id="@id/tv_about" android:background="?selectableItemBackground" android:padding="16.0dip" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/pref_header_about" android:drawableLeft="@drawable/ic_info" android:drawablePadding="16.0dip" android:drawableTint="@color/iconTintLight" />
</LinearLayout>