<?xml version="1.0" encoding="utf-8"?>
<navigation android:id="@id/nav_settings" app:startDestination="@id/settingsFragment"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <fragment android:label="@string/Settings" android:name="com.teamxdevelopers.SuperChat.activities.settings.SettingsFragment" android:id="@id/settingsFragment">
        <action android:id="@id/action_settingsFragment_to_profilePreferenceFragment" app:destination="@id/profilePreferenceFragment" app:enterAnim="@android:anim/slide_in_left" app:exitAnim="@android:anim/slide_out_right" app:popEnterAnim="@android:anim/slide_in_left" app:popExitAnim="@android:anim/slide_out_right" />
        <action android:id="@id/action_settingsFragment_to_notificationPreferenceFragment" app:destination="@id/notificationPreferenceFragment" app:enterAnim="@android:anim/slide_in_left" app:exitAnim="@android:anim/slide_out_right" app:popEnterAnim="@android:anim/slide_in_left" app:popExitAnim="@android:anim/slide_out_right" />
        <action android:id="@id/action_settingsFragment_to_chatSettingsPreferenceFragment2" app:destination="@id/chatSettingsPreferenceFragment" app:enterAnim="@android:anim/slide_in_left" app:exitAnim="@android:anim/slide_out_right" app:popEnterAnim="@android:anim/slide_in_left" app:popExitAnim="@android:anim/slide_out_right" />
        <action android:id="@id/action_settingsFragment_to_securityPreferencesFragment" app:destination="@id/securityPreferencesFragment" app:enterAnim="@android:anim/slide_in_left" app:exitAnim="@android:anim/slide_out_right" app:popEnterAnim="@android:anim/slide_in_left" app:popExitAnim="@android:anim/slide_out_right" />
        <action android:id="@id/action_settingsFragment_to_privacyPolicyFragment" app:destination="@id/privacyPolicyFragment" app:enterAnim="@android:anim/slide_in_left" app:exitAnim="@android:anim/slide_out_right" app:popEnterAnim="@android:anim/slide_in_left" app:popExitAnim="@android:anim/slide_out_right" />
        <action android:id="@id/action_settingsFragment_to_aboutFragment2" app:destination="@id/aboutFragment" app:enterAnim="@android:anim/slide_in_left" app:exitAnim="@android:anim/slide_out_right" app:popEnterAnim="@android:anim/slide_in_left" app:popExitAnim="@android:anim/slide_out_right" />
        <action android:id="@id/action_settingsFragment_to_customizeSettingsPreferenceFragment2" app:destination="@id/customizeSettingsPreferenceFragment" app:enterAnim="@android:anim/slide_in_left" app:exitAnim="@android:anim/slide_out_right" app:popEnterAnim="@android:anim/slide_in_left" app:popExitAnim="@android:anim/slide_out_right" />
        <action android:id="@id/action_settingsFragment_to_privacySettingsFragment" app:destination="@id/privacySettingsFragment" app:enterAnim="@android:anim/slide_in_left" app:exitAnim="@android:anim/slide_out_right" app:popEnterAnim="@android:anim/slide_in_left" app:popExitAnim="@android:anim/slide_out_right" />
        <action android:id="@id/action_settingsFragment_to_AccountSettingsFragment" app:destination="@id/AccountSettingsFragment" app:enterAnim="@android:anim/slide_in_left" app:exitAnim="@android:anim/slide_out_right" app:popEnterAnim="@android:anim/slide_in_left" app:popExitAnim="@android:anim/slide_out_right" />
    </fragment>
    <fragment android:label="@string/profile" android:name="com.teamxdevelopers.SuperChat.activities.settings.ProfilePreferenceFragment" android:id="@id/profilePreferenceFragment" />
    <fragment android:label="@string/privacy" android:name="com.teamxdevelopers.SuperChat.fragments.privacyFragment" android:id="@id/privacySettingsFragment" />
    <fragment android:label="Account" android:name="com.teamxdevelopers.SuperChat.fragments.AccountFragment" android:id="@id/AccountSettingsFragment">
        <action android:id="@id/action_AccountSettingsFragment_to_AccountEnable2svSettingsFragment" app:destination="@id/AccountEnable2svSettingsFragment" app:enterAnim="@android:anim/slide_in_left" app:exitAnim="@android:anim/slide_out_right" app:popEnterAnim="@android:anim/slide_in_left" app:popExitAnim="@android:anim/slide_out_right" />
        <action android:id="@id/action_AccountSettingsFragment_to_deleteFragment" app:destination="@id/deleteFragment" app:enterAnim="@android:anim/slide_in_left" app:exitAnim="@android:anim/slide_out_right" app:popEnterAnim="@android:anim/slide_in_left" app:popExitAnim="@android:anim/slide_out_right" />
        <action android:id="@id/action_AccountSettingsFragment_to_accountVerificationFragment" app:destination="@id/accountVerificationFragment" app:enterAnim="@android:anim/slide_in_left" app:exitAnim="@android:anim/slide_out_right" app:popEnterAnim="@android:anim/slide_in_left" app:popExitAnim="@android:anim/slide_out_right" />
    </fragment>
    <fragment android:label="@string/notifications" android:name="com.teamxdevelopers.SuperChat.activities.settings.NotificationPreferenceFragment" android:id="@id/notificationPreferenceFragment" />
    <fragment android:label="@string/chat" android:name="com.teamxdevelopers.SuperChat.activities.settings.ChatSettingsPreferenceFragment" android:id="@id/chatSettingsPreferenceFragment" />
    <fragment android:label="@string/pref_header_customize" android:name="com.teamxdevelopers.SuperChat.fragments.CustomizeFragment" android:id="@id/customizeSettingsPreferenceFragment" />
    <fragment android:label="@string/security" android:name="com.teamxdevelopers.SuperChat.activities.settings.SecurityPreferencesFragment" android:id="@id/securityPreferencesFragment" />
    <fragment android:label="@string/privacy_policy" android:name="com.teamxdevelopers.SuperChat.activities.settings.PrivacyPolicyFragment" android:id="@id/privacyPolicyFragment" />
    <fragment android:label="@string/about" android:name="com.teamxdevelopers.SuperChat.activities.settings.AboutFragment" android:id="@id/aboutFragment" />
    <fragment android:label="Delete Account" android:name="com.teamxdevelopers.SuperChat.fragments.DelateAccountFragment" android:id="@id/deleteFragment" />
    <fragment android:label="Two-step verification" android:name="com.teamxdevelopers.SuperChat.fragments.TwoSVFragment" android:id="@id/AccountSet2svSettingsFragment" />
    <fragment android:label="Two-step verification" android:name="com.teamxdevelopers.SuperChat.fragments.Enable2svFragment" android:id="@id/AccountEnable2svSettingsFragment">
        <action android:id="@id/action_AccountEnable2svSettingsFragment_to_AccountSet2svSettingsFragment" app:destination="@id/AccountSet2svSettingsFragment" app:enterAnim="@android:anim/slide_in_left" app:exitAnim="@android:anim/slide_out_right" app:popEnterAnim="@android:anim/slide_in_left" app:popExitAnim="@android:anim/slide_out_right" />
    </fragment>
    <fragment android:label="@string/account_verification" android:name="com.teamxdevelopers.SuperChat.fragments.AccountVerificationFragment" android:id="@id/accountVerificationFragment" />
</navigation>